<resources>
    <string name="app_name">App Firebase</string>
    <string name="EditTextEmailLogin">Email</string>
    <string name="EditTextSenhaLogin">Senha</string>
    <string name="TextViewCadastrarLogin">Criar Conta</string>
    <string name="TextViewRecuperarLogin">Recuperar Conta</string>

    <string name="TextViewCadastrarCadastro">Cadastrar Novo Usuario</string>
    <string name="EditTextNomeCadastro">Nome</string>
    <string name="EditTextEmailCadastro">Email</string>
    <string name="EditTextSenhaCadastro">senha</string>

    <string name="TextViewSenha2Cadastro">Repetir Senha</string>
    <string name="EditTextSenha2Cadastro">Repetir Senha</string>
    <string name="Bt_cadastrar">Cadastrar</string>

    <string name="TextViewRecuperarSenha">Recuperar Conta</string>
    <string name="Bt_recuperar">Recuperar</string>
</resources>