<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RecuperarConta">

    <ImageButton
        android:id="@+id/BackButtonRecuperarConta"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Voltar"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewRecuperarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="207dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="146dp"
        android:text="@string/TextViewRecuperarSenha"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackButtonRecuperarConta"/>

    <View
        android:id="@+id/containerComponentsRecuperarConta"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewRecuperarConta"/>

    <EditText
        android:id="@+id/editTextEmailRecuperarConta"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/EditTextEmailLogin"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRecuperarConta"
        app:layout_constraintStart_toStartOf="@id/containerComponentsRecuperarConta"
        app:layout_constraintTop_toTopOf="@id/containerComponentsRecuperarConta" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_recuperar"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Bt_recuperar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRecuperarConta"
        app:layout_constraintStart_toStartOf="@id/containerComponentsRecuperarConta"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRecuperarConta" />


</androidx.constraintlayout.widget.ConstraintLayout>